Amend word-wraps in the editor of all formats(None,BR,Markdown,Markdown+SmartyuPants,RichText,Textile) without TinyMCE Plugin. bugid: 113312

--- a/mt-static/css/editor/editor-content.css
+++ b/mt-static/css/editor/editor-content.css
@@ -20,6 +20,7 @@ body {
     color: #000000;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: 14px;
+    word-break: break-all;
 }
 
 p {
